[workspace]
resolver = "3"
members = [
    "common",
    "scheduler",
    "workflows",
    "redis-proxy",
    "supervisor",
]

[profile.release]
strip = "symbols"

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
chrono = { version = "0.4", default-features = false }
futures-util = { version = "0.3", default-features = false }
getrandom = "0.4"
redis = { version = "1.3", default-features = false }
reqwest = { version = "0.13", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.11.0"
subtle = "2.6"
tokio = "1"
wdl-rust-common = { path = "common", default-features = false }

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
perf = "warn"
complexity = "warn"
