[package]
name = "workflows"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
name = "workflows"
path = "src/lib.rs"

[[bin]]
name = "workflows"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio"] }
futures-util = { workspace = true, features = ["std"] }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
wdl-rust-common = { workspace = true, features = ["axum"] }
